<resources>
    <string name="app_name">displaytest</string>
    <string name="title_activity_emdemo">EMdemoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_qxdm">QXDM</string>
    <string name="menu_tcp">TCP DUMP</string>
    <string name="menu_wlan">WLAN DRIVER</string>
    <string name="menu_save">Save Log</string>
    <string name="menu_Running">Running Service</string>
    <string name="menu_take">Take Log</string>
    <string name="tab_text_1">BACKUP</string>
    <string name="tab_text_2">SYNC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
